--- a/lib/its_a_party_web/templates/admin/user/show.html.eex
+++ b/lib/its_a_party_web/templates/admin/user/show.html.eex
@@ -17,6 +17,10 @@
     <%= @user.roles %>
   </li>
 
+  <li>
+    <strong>Email:</strong>
+    <%= @user.credential.email %>
+  </li>
 </ul>
 
 <span><%= link "Edit", to: admin_user_path(@conn, :edit, @user) %></span>
