--- a/lib/its_a_party_web/templates/admin/user/form.html.eex
+++ b/lib/its_a_party_web/templates/admin/user/form.html.eex
@@ -18,6 +18,32 @@
   </div>
 
   <div class="form-group">
+    <%= label f, :roles, class: "control-label" %>
+    <%= multiple_select f, :roles, ["Admin": "admin"], selected: @changeset.data.roles %>
+    <%= error_tag f, :roles %>
+  </div>
+  
+  <%= inputs_for f, :credential, fn cf -> %>
+    <div class="form-group">
+     <%= label cf, :email, class: "control-label" %>
+     <%= text_input cf, :email, class: "form-control" %>
+     <%= error_tag cf, :email %>
+    </div>
+
+    <div class="form-group">
+     <%= label cf, :password, class: "control-label" %>
+     <%= password_input cf, :password, class: "form-control" %>
+     <%= error_tag cf, :password %>
+    </div>
+
+    <div class="form-group">
+     <%= label cf, :password_confirmation, class: "control-label" %>
+     <%= password_input cf, :password_confirmation, class: "form-control" %>
+     <%= error_tag cf, :password_confirmation %>
+    </div>
+  <% end %>
+  
+  <div class="form-group">
     <%= submit "Submit", class: "btn btn-primary" %>
   </div>
 <% end %>
